--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -61,6 +61,13 @@ body{
 }
 
 #app{
+  position: fixed;
+  left: 0px; right: 0px; bottom: 0px; top: 0px;
+}
+
+.layout-container {
+  position: fixed;
+  left: 0px; right: 0px; bottom: 0px; top: 0px;
 }
 
 *,
@@ -306,16 +313,20 @@ form h1 {
 }
 
 .search-bottom-container {
+  position: relative;
+  display: flex;
   background-color: rgba(0,0,0,0.2);
 }
 
 .search-results-container {
-  position: relative;
+  position: absolute;
+  top: 0px; bottom: 0px; left: 0px; right: 0px;
   overflow-y: auto;
 }
 
 .suggestions-container {
-  position: relative;
+  position: absolute;
+  top: 0px; bottom: 0px; left: 0px; right: 0px;
   overflow-y: auto;
   padding: 0px 15px;
   border: 1px #ccc solid;
