--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -308,7 +308,7 @@ form h1 {
   position: relative;
   height: 78px;
   display: flex;
-  background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0,0,0,0.3);
 }
 
 .search-bottom-container {
@@ -516,15 +516,16 @@ word, word:active, word:focus{
 }
 
 .filter-input:focus {
-	border-color: #66afe9 !important;
+	border-color: rgba(0,0,0,0.2) !important;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) !important;
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) !important;
+	outline: none !important;
 }
 
 .next-word-suggestion {
   position: absolute;
   box-sizing: border-box;
-  top: 21px; left: 23px;
+  top: 22px; left: 23px;
   font-size: 18px;
   font-weight: 400;
   line-height: 34px;
@@ -584,9 +585,8 @@ word, word:active, word:focus{
 }
 
 .search-result-count{
-	margin: 0px 6px 4px;
+	margin: -2px 6px 4px;
 	font-weight: bold;
-	opacity: .3;
 }
 
 .filter-input-icons {
@@ -597,15 +597,21 @@ word, word:active, word:focus{
   list-style-type: none;
 }
 
+.filter-input-icons i {
+  margin-top: 3px;
+  font-size: 32px;
+}
+
 .filter-input-icons > li {
   display: inline-block;
   vertical-align: middle;
   cursor: pointer;
   padding-left: 12px;
-}
-.filter-input-icon {
   opacity: 0.3;
-  font-size: 28px;
+  font-size: 28px !important;
+}
+
+.filter-input-icon {
 }
 .filter-input-icon:hover {
   opacity: 0.6;
